# brave-core

./: package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: brave_generated_resources.grd
browser/brave_ads/tooltips/: BUILD.gn
browser/brave_wallet/: asset_ratio_controller_browsertest.cc  brave_wallet_provider_delegate_impl_android.cc
browser/ephemeral_storage/: BUILD.gn
browser/search_engines/: search_engine_provider_service.cc
browser/ui/: BUILD.gn
browser/ui/brave_ads/: ad_notfication_popup_browsertest.cc
browser/ui/webui/: brave_rewards_page_ui.cc  brave_webui_source.cc
chromium_src/components/permissions/: permission_context_base.cc  permission_context_base.h  permission_request_manager.cc  permission_request_manager.h  permission_uma_util.cc  permission_util.h  permissions_client.cc  permissions_client.h  request_type.cc  request_type.h
common/: BUILD.gn
components/brave_ads/browser/: ads_service_impl.cc
components/brave_wallet/browser/: BUILD.gn  asset_ratio_controller.cc  (+5 more)
components/definitions/: rewards.d.ts
components/permissions/: sources.gni
ios/browser/: BUILD.gn
ios/browser/component_updater/: BUILD.gn  ios_brave_component_installer.cc  ios_brave_component_installer.h  ios_brave_component_updater_configurator.cc  ios_brave_component_updater_configurator.h  ios_brave_component_updater_delegate.cc  ios_brave_component_updater_delegate.h  sources.gni
patches/: chrome-VERSION.patch  chrome-browser-permissions-chrome_permissions_client.h.patch  components-permissions-permission_request_manager.cc.patch  components-permissions-permission_request_manager.h.patch  components-permissions-permission_uma_util.cc.patch  components-permissions-request_type.cc.patch  components-permissions-request_type.h.patch
test/: BUILD.gn
test/snapshot/: widget_snapshot_checker.cc  widget_snapshot_checker.h
(+27 files in other folders)
