# Copyright (c) 2021 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

brave_browser_component_updater_sources = [
  "//brave/ios/browser/component_updater/ios_brave_component_updater_configurator.cc",
  "//brave/ios/browser/component_updater/ios_brave_component_updater_configurator.h",
]

brave_browser_component_updater_deps = [
  "//base",
  "//brave/common:switches",
  "//components/component_updater",
  "//components/crx_file",
  "//components/prefs",
  "//components/services/patch:in_process",
  "//components/services/unzip:in_process",
  "//components/update_client",
  "//components/update_client:network_impl",
  "//components/update_client:patch_impl",
  "//components/update_client:unzip_impl",
  "//services/network/public/cpp",
]
